# BreakJoe

./: CMakeLists.txt  Doxyfile  README.md  build.py
Assets/: english.txt  french.txt  level1.txt  level2.txt  level3.txt
Doc/html/: annotated.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  ft2build_8h_source.html  functions.html  functions_func.html  functions_vars.html  graph_legend.html  index.html  menudata.js
Doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  searchdata.js  variables_0.js  variables_1.js  (+15 more)
Doc/latex/: annotated.tex  refman.tex
include/: Clip.h  Entity.h  Game.h  LOpenGL.h  LTimer.h  ResourceManager.h  TinyMath.hpp
include/IL/: ilut.h
lib/: README.md
lib/freetype2/: libfreetype.lai  libfreetype.so.6.17.4
src/: Clip.cpp  Game.cpp  LTimer.cpp  ResourceManager.cpp  main.cpp
